--- a/src/main/resources/static/css/asn2.css
+++ b/src/main/resources/static/css/asn2.css
@@ -1,4 +1,6 @@
-/* asn2-doc\src\main\resources\static\css */
+/* Place: asn2-doc\src\main\resources\static\css
+   Filename: asn2.css */
+
 
 body {
   font-family: Arial, sans-serif;
